<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_ffffff"
    android:elevation="5dp">

    <android.support.constraint.Guideline
        android:id="@+id/left_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.0" />

    <android.support.constraint.Guideline
        android:id="@+id/right_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1.0" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/button_close"
        app:layout_constraintLeft_toLeftOf="@id/left_guide"
        app:layout_constraintRight_toRightOf="@id/right_guide">

        <TextView
            android:id="@+id/button_menu_title"
            style="@style/button_menu_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:background="@color/color_D43131"
            android:text="@string/menu_title"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_8d8d8d" />

        <LinearLayout
            android:id="@+id/button_member"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/button_menu_list"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="10dp"
                android:text="@string/menu_member"
                app:layout_constraintTop_toBottomOf="@id/button_menu_title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_8d8d8d" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/button_menu_list"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="10dp"
                android:text="@string/menu_evnet"
                app:layout_constraintTop_toBottomOf="@id/button_menu_title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_8d8d8d" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/button_smode_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/button_menu_list"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="10dp"
                android:text="@string/menu_smode_log"
                app:layout_constraintTop_toBottomOf="@id/button_menu_title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_8d8d8d" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/button_member_invite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/button_menu_list"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="10dp"
                android:text="@string/menu_member_invite"
                app:layout_constraintTop_toBottomOf="@id/button_menu_title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_8d8d8d" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_install"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/button_menu_list"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="10dp"
                android:text="@string/menu_install"
                app:layout_constraintTop_toBottomOf="@id/button_menu_title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_8d8d8d" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/button_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/button_menu_list"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="10dp"
                android:text="@string/menu_delete"
                app:layout_constraintTop_toBottomOf="@id/button_menu_title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_8d8d8d" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/button_menu_list"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="10dp"
                android:text="@string/menu_logout"
                app:layout_constraintTop_toBottomOf="@id/button_menu_title" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/button_close"
        style="@style/button_menu_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:background="@color/color_D43131"
        android:text="@string/menu_close"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>

