<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:id="@+id/left_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />


    <android.support.constraint.Guideline
        android:id="@+id/right_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <android.support.constraint.Guideline
        android:id="@+id/top_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />


    <android.support.constraint.Guideline
        android:id="@+id/login_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"
        />

    <View
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="H,299:50"
        app:layout_constraintLeft_toLeftOf="@id/left_guide"
        app:layout_constraintRight_toRightOf="@id/right_guide"
        app:layout_constraintTop_toTopOf="@id/top_guide" />

    <EditText
        android:id="@+id/edit_email"
        style="@style/sign_in_edittext"
        android:background="@drawable/background_edit"
        android:layout_width="0dp"
        android:layout_height="47dp"
        app:layout_constraintLeft_toLeftOf="@id/left_guide"
        app:layout_constraintRight_toRightOf="@id/right_guide"
        app:layout_constraintTop_toTopOf="@id/login_guide"
        android:hint="@string/sign_in_email"
        />

    <EditText
        android:id="@+id/edit_password"
        style="@style/sign_in_edittext"
        android:background="@drawable/background_edit"
        android:layout_width="0dp"
        android:layout_height="47dp"
        app:layout_constraintLeft_toLeftOf="@id/left_guide"
        app:layout_constraintRight_toRightOf="@id/right_guide"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        android:layout_marginTop="10dp"
        android:hint="@string/sign_in_password"
        />

    <TextView
        android:id="@+id/textview_forgot"
        style="@style/sign_in_textview"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:text="@string/sign_in_forgot"
        app:layout_constraintLeft_toLeftOf="@id/left_guide"
        app:layout_constraintRight_toRightOf="@id/right_guide"
        app:layout_constraintTop_toBottomOf="@id/button_login"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/textview_navigation"
        style="@style/sign_in_textview"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:text="@string/sign_in_navigation"
        app:layout_constraintLeft_toLeftOf="@id/left_guide"
        app:layout_constraintRight_toRightOf="@id/right_guide"
        app:layout_constraintTop_toBottomOf="@id/textview_forgot"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/button_sign_up"
        style="@style/sign_in_button"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:text="@string/sign_in_sign_up"
        android:background="@drawable/background_button"
        app:layout_constraintLeft_toLeftOf="@id/left_guide"
        app:layout_constraintRight_toRightOf="@id/right_guide"
        app:layout_constraintTop_toBottomOf="@id/textview_navigation"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/button_login"
        style="@style/sign_in_button"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:text="@string/sign_in_login"
        android:background="@drawable/background_button"
        app:layout_constraintLeft_toLeftOf="@id/left_guide"
        app:layout_constraintRight_toRightOf="@id/right_guide"
        app:layout_constraintTop_toBottomOf="@id/edit_password"
        android:layout_marginTop="10dp" />



</android.support.constraint.ConstraintLayout>