<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/color_D43131"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/button_up"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:visibility="visible">

                <View
                    android:layout_width="0dp"
                    android:layout_height="18dp"
                    android:background="@drawable/icon_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="W,28:37"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:duplicateParentState="true" />
            </android.support.constraint.ConstraintLayout>

            <TextView
                android:id="@+id/text_title"
                style="@style/toolbar_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/main_title" />

            <RelativeLayout
                android:id="@+id/button_home"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:visibility="invisible">

                <View
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_centerInParent="true" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:duplicateParentState="true" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <android.support.constraint.Guideline
            android:id="@+id/left_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <android.support.constraint.Guideline
            android:id="@+id/right_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85"
            />

        <android.support.constraint.Guideline
            android:id="@+id/top_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <View
            android:id="@+id/logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H,299:50"
            app:layout_constraintLeft_toLeftOf="@id/left_guide"
            app:layout_constraintRight_toRightOf="@id/right_guide"
            app:layout_constraintTop_toTopOf="@id/top_guide" />

        <EditText
            android:id="@+id/edittext_signup_email"
            android:background="@drawable/background_edit"
            android:hint="@string/sign_in_email"
            android:singleLine = "true"
            android:lines = "1"
            style="@style/sign_in_edittext"
            android:layout_width="0dp"
            android:layout_height="45dp"
            app:layout_constraintLeft_toLeftOf="@id/left_guide"
            app:layout_constraintRight_toRightOf="@id/right_guide"
            app:layout_constraintTop_toBottomOf="@id/logo"
            android:layout_marginTop="50dp"
            android:maxLength="30"

            />

        <EditText
            android:id="@+id/edittext_signup_name"
            android:background="@drawable/background_edit"
            android:hint="@string/sign_up_name"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:singleLine = "true"
            android:lines = "1"
            style="@style/sign_in_edittext"
            app:layout_constraintLeft_toLeftOf="@id/left_guide"
            app:layout_constraintRight_toRightOf="@id/right_guide"
            app:layout_constraintTop_toBottomOf="@id/edittext_signup_email"
            android:layout_marginTop="10dp"
            android:maxLength="15"
            />

        <EditText
            android:id="@+id/edittext_signup_password"
            android:background="@drawable/background_edit"
            android:hint="@string/sign_in_password"
            style="@style/sign_in_edittext"
            android:layout_width="0dp"
            android:layout_height="45dp"
            app:layout_constraintLeft_toLeftOf="@id/left_guide"
            app:layout_constraintRight_toRightOf="@id/right_guide"
            app:layout_constraintTop_toBottomOf="@id/edittext_signup_name"
            android:layout_marginTop="10dp"
            android:maxLength="20"
            android:inputType="textPassword"
            />

        <EditText
            android:id="@+id/edittext_signup_repassword"
            android:background="@drawable/background_edit"
            android:hint="@string/sign_up_repassword"
            style="@style/sign_in_edittext"
            android:layout_width="0dp"
            android:layout_height="45dp"
            app:layout_constraintLeft_toLeftOf="@id/left_guide"
            app:layout_constraintRight_toRightOf="@id/right_guide"
            app:layout_constraintTop_toBottomOf="@id/edittext_signup_password"
            android:layout_marginTop="10dp"
            android:maxLength="20"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/button_sign_in_login"
            style="@style/sign_in_button"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:text="@string/sign_in_sign_up"
            android:background="@drawable/background_button"
            app:layout_constraintLeft_toLeftOf="@id/left_guide"
            app:layout_constraintRight_toRightOf="@id/right_guide"
            app:layout_constraintTop_toBottomOf="@id/edittext_signup_repassword"
            android:layout_marginTop="30dp"/>


    </android.support.constraint.ConstraintLayout>




</android.support.constraint.ConstraintLayout>