<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_FFFBF7F1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/color_D43131"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/button_up"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:visibility="visible">

                <View
                    android:layout_width="0dp"
                    android:layout_height="18dp"
                    android:background="@drawable/icon_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="W,28:37"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:duplicateParentState="true" />
            </android.support.constraint.ConstraintLayout>

            <TextView
                android:id="@+id/text_title"
                style="@style/toolbar_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/install_splash_install" />

            <RelativeLayout
                android:id="@+id/button_home"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:visibility="invisible">

                <View
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_centerInParent="true" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:duplicateParentState="true" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <android.support.constraint.Guideline
            android:id="@+id/left_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10" />


        <android.support.constraint.Guideline
            android:id="@+id/right_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <android.support.constraint.Guideline
            android:id="@+id/top_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <TextView
            android:id="@+id/text_navi_main"
            style="@style/text_install_splash_navi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/install_splash_navi"
            app:layout_constraintLeft_toLeftOf="@id/left_guide"
            app:layout_constraintRight_toRightOf="@id/right_guide"
            app:layout_constraintTop_toTopOf="@id/top_guide" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/button_usertype"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_edit"
            app:layout_constraintLeft_toLeftOf="@id/left_guide"
            app:layout_constraintRight_toRightOf="@id/right_guide"
            app:layout_constraintTop_toBottomOf="@id/text_navi_main">

            <TextView
                android:id="@+id/text_usertype"
                style="@style/text_install_splash_usertype"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:text="@string/install_splash_type"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="@id/button_arrow"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/button_arrow"
                android:layout_width="@dimen/button_height"
                android:layout_height="@dimen/button_height"
                app:layout_constraintRight_toRightOf="parent">

                <View
                    android:id="@+id/view_arrow"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="15dp"
                    android:background="@drawable/icon_arrow_down"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="H,100:56"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>


        <TextView
            android:id="@+id/text_navi_sub"
            style="@style/text_install_splash_navi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edit"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/button_install"
            app:layout_constraintLeft_toLeftOf="@id/left_guide"
            app:layout_constraintRight_toRightOf="@id/right_guide"
            app:layout_constraintTop_toBottomOf="@id/button_usertype"
            app:layout_constraintVertical_bias="0.3" />

        <LinearLayout
            android:id="@+id/layout_option"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/color_ffffff"
            android:orientation="vertical"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="@id/left_guide"
            app:layout_constraintRight_toRightOf="@id/right_guide"
            app:layout_constraintTop_toBottomOf="@id/button_usertype">

            <TextView
                android:id="@+id/button_master"
                style="@style/text_install_splash_usertype"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/background_edit"
                android:paddingLeft="10dp"
                android:text="@string/type_master" />

            <TextView
                android:id="@+id/button_guest"
                style="@style/text_install_splash_usertype"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/background_edit"
                android:paddingLeft="10dp"
                android:text="@string/type_guest" />

            />

        </LinearLayout>


        <TextView
            android:id="@+id/button_install"
            style="@style/button_install_splash"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginBottom="20dp"
            android:background="@drawable/background_button"
            android:text="@string/install_splash_install"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/left_guide"
            app:layout_constraintRight_toRightOf="@id/right_guide" />


    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>